--- a/index.css
+++ b/index.css
@@ -120,3 +120,10 @@ input::placeholder {
 	color: rgba(255,255,255,0.4);
 }
 
+.ad{
+	display: flex;
+	justify-content: space-around;
+	width: 100vw;
+	overflow: hidden;
+}
+
