--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ header>*{
 	align-items: center;
 	justify-content: center;
 }
+
 #inputArea {
 	box-sizing: border-box;
 	height:50%;
@@ -127,3 +128,33 @@ input::placeholder {
 	overflow: hidden;
 }
 
+#testArea:hover #testArea:before{
+	width: 100vw;
+	height: 100vh;
+	filter: blur(10px);
+}
+
+
+@media screen and (orientation: portrait) {
+	#title {
+		font-size: 4em;
+	}
+	#inputArea {
+		height:50%;
+		justify-content: initial;
+	}
+	#x,#y,#n {
+		font-size: 2em;
+		width: 10vw; 
+	}
+	#selector {
+		text-align: center;
+		margin: 0;
+		font-size: 1.6em;
+		line-height: 1.6;
+		margin-right: 1em;
+	}
+	.input {
+		font-size: 2em;
+	}
+}
